fix error checking, more logging of gtfs transfers
factored out method to rebuild only pattern-for-stop index